@@ -1,4 +1,5 @@
 4.0
+	+ Re-enable user synchronization with Zentyal Cloud
 	+ Add daemon to check users and groups to have uidNumber and gidNumber
 	+ Add confirmation when removing mail account via the edit user form
 	+ Add hostname change confirmation dialog to wizard
